--- a/quartzdesk-executor-core/src/main/resources/default-quartzdesk-executor.properties
+++ b/quartzdesk-executor-core/src/main/resources/default-quartzdesk-executor.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2015-2020 QuartzDesk.com.
+# Copyright (c) 2015-2025 QuartzDesk.com.
 # Licensed under the MIT license (https://opensource.org/licenses/MIT).
 #
 
@@ -9,25 +9,25 @@
 ds.jndi.name = QuartzDeskExecutorDS
 
 #
-# The database profile to use with QuartzDesk.
+# The database profile to use with QuartzDesk Executor.
+#
 # Default type is H2.
 #
-# Database              Version      db.profile
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# H2                    >= 1.3       h2
+# Database              Version           db.profile     Notes
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# DB2                   >= 10.5           db2
 #
-# DB2                   >= 10.0      db2
+# H2                    >= 2.1.214        h2             Primarily intended for development and experimental
+#                                                        purposes. For production deployments, we recommend
+#                                                        using one of the other available database profiles.
+# Microsoft SQL Server  >= 2008           mssql
 #
-# Microsoft SQL Server  >= 2008      mssql
+# MySql (MyISAM)        >= 5.7            mysql
+# MySql (InnoDB)        >= 5.7            mysql_innodb
 #
-# MySql (MyISAM)        >= 5.6       mysql
-# MySql (InnoDB)        >= 5.6       mysql_innodb
+# Oracle                >= 11g Release 2  oracle
 #
-# Oracle                == 8i        oracle8
-# Oracle                >= 9i        oracle9
-#
-# PostgreSQL            == 8.1       postgres81
-# PostgreSQL            >= 8.2       postgres82
+# PostgreSQL            >= 11             postgresql
 #
 db.profile = h2
 
