--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 
     <org.slf4j.version>2.0.17</org.slf4j.version>
 
-    <org.springframework.version>6.2.12</org.springframework.version>
+    <org.springframework.version>6.2.14</org.springframework.version>
   </properties>
 
   <name>QuartzDesk Executor</name>
@@ -152,9 +152,9 @@
         commands over SSH.
       -->
       <dependency>
-        <groupId>com.jcraft</groupId>
+        <groupId>com.github.mwiede</groupId>
         <artifactId>jsch</artifactId>
-        <version>0.1.55</version>
+        <version>2.27.7</version>
       </dependency>
 
 
@@ -259,18 +259,18 @@
       </dependency>
 
 
-      <dependency>
-        <groupId>javaee</groupId>
-        <artifactId>javaee-api</artifactId>
-        <version>5</version>
-      </dependency>
+<!--      <dependency>-->
+<!--        <groupId>javaee</groupId>-->
+<!--        <artifactId>javaee-api</artifactId>-->
+<!--        <version>5</version>-->
+<!--      </dependency>-->
 
 
       <!-- Used by commons-text -->
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.14.0</version>
+        <version>3.20.0</version>
       </dependency>
 
 
@@ -280,7 +280,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-text</artifactId>
-        <version>1.12.0</version>
+        <version>1.14.0</version>
       </dependency>
 
 
