--- a/quartzdesk-executor-core/pom.xml
+++ b/quartzdesk-executor-core/pom.xml
@@ -61,7 +61,7 @@
 
 
     <dependency>
-      <groupId>com.jcraft</groupId>
+      <groupId>com.github.mwiede</groupId>
       <artifactId>jsch</artifactId>
       <scope>compile</scope>
     </dependency>
